[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ram"
authors = [{name="Matthieu Terris"}, {name="Samuel Hurault"}, {name="Maxime Song"}, {name="Julian Tachella"}]
license = {text = "BSD 3-Clause"}
description = "Reconstruct-Anything-Model"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"
version = "0.1"
dependencies = [
    "deepinv>=0.3.0",
    "torch",
    "huggingface_hub",
    "torchvision",
]

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.packages]
find = { where = ["."] }

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://deepinv.github.io/"
Source = "https://github.com/matthieutrs/ram"
Tracker = "https://github.com/matthieutrs/ram/issues"
